discussion/kv_engine/184675/184675_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Add setHistoryRetentionBytes to KVStore

Implemented only in magma-kvstore.cc and calls through to
SetHistoryRetentionBytes

Change-Id: I597f444add833c77180ae4bb07ce7ee94a788530

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-09 16:47:42.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-09 16:48:06.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/331449/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-09 17:09:05.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/765/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2870:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/765/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2870:18:
error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/765/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/942/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-memory-tracking-proxy.h(53): error C2061: syntax error: identifier "Mode" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/942/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/736/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/736/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/776/ : FAILURE

Compile error at [2023-01-09T17:08:35.311Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/776/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/777/ : FAILURE

Compile error at [2023-01-09T16:52:31.914Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/777/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/770/ : FAILURE

Compile error at [2023-01-09T16:57:05.304Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/770/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/784/ : FAILURE

Compile error at [2023-01-09T17:01:09.137Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/784/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/757/ : FAILURE

Compile error at [2023-01-09T17:07:38.833Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/757/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1050/ : FAILURE

Compile error at [2023-01-09T16:50:49.275Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1050/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22042/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/786/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
